@@ -4,6 +4,7 @@
 - Added Graphics#drawBitmapFontCache
 - UI framework now renders text using BitmapFontCache instances
 - Performance improvements to Polygon class
+- Moved Os util classes to natives-loader project
 
 [1.3.1]
 - Graphics can now take circle radius as an int or float
